Titanic survival project: Complete

--- a/projects/titanic_survival_exploration/titanic_survival_exploration.ipynb
+++ b/projects/titanic_survival_exploration/titanic_survival_exploration.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-19fe2f5a8a4b>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-19fe2f5a8a4b>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    In 1912, the ship RMS Titanic struck an iceberg on its maiden voyage and sank, resulting in the deaths of most of its passengers and crew. In this introductory project, we will explore a subset of the RMS Titanic passenger manifest to determine which features best predict whether someone survived or did not survive. To complete this project, you will need to implement several conditional predictions and answer the questions below. Your project submission will be evaluated based on the completion of the code and your responses to the questions.\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Machine Learning Engineer Nanodegree\n",
     "## Introduction and Foundations\n",
@@ -25,9 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries necessary for this project\n",
@@ -73,9 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Store the 'Survived' feature in a new variable and remove it from the dataset\n",
@@ -100,9 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def accuracy_score(truth, pred):\n",
@@ -137,9 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def predictions_0(data):\n",
@@ -172,9 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(accuracy_score(outcomes, predictions))"
@@ -184,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** *Replace this text with the prediction accuracy you found above.*"
+    "**Answer:** 61.62%"
    ]
   },
   {
@@ -199,9 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "vs.survival_stats(data, outcomes, 'Sex')"
@@ -219,9 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def predictions_1(data):\n",
@@ -233,7 +230,8 @@
     "        \n",
     "        # Remove the 'pass' statement below \n",
     "        # and write your prediction conditions here\n",
-    "        pass\n",
+    "        is_female = passenger['Sex'] == 'female'\n",
+    "        predictions.append(1 if is_female else 0)\n",
     "    \n",
     "    # Return our predictions\n",
     "    return pd.Series(predictions)\n",
@@ -256,9 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(accuracy_score(outcomes, predictions))"
@@ -268,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: *Replace this text with the prediction accuracy you found above.*"
+    "**Answer**: 78.68%"
    ]
   },
   {
@@ -283,9 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "vs.survival_stats(data, outcomes, 'Age', [\"Sex == 'male'\"])"
@@ -305,9 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def predictions_2(data):\n",
@@ -320,7 +312,9 @@
     "        \n",
     "        # Remove the 'pass' statement below \n",
     "        # and write your prediction conditions here\n",
-    "        pass\n",
+    "        is_female = passenger['Sex'] == 'female'\n",
+    "        is_young_male = passenger['Age'] < 10.\n",
+    "        predictions.append(1 if is_female or is_young_male else 0)\n",
     "    \n",
     "    # Return our predictions\n",
     "    return pd.Series(predictions)\n",
@@ -343,9 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(accuracy_score(outcomes, predictions))"
@@ -355,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: *Replace this text with the prediction accuracy you found above.*"
+    "**Answer**: 79.35%"
    ]
   },
   {
@@ -375,12 +367,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "vs.survival_stats(data, outcomes, 'Age', [\"Sex == 'male'\", \"Age < 18\"])"
+    "vs.survival_stats(data, outcomes, 'Age', [\"Pclass == 1\"])"
    ]
   },
   {
@@ -395,9 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def predictions_3(data):\n",
@@ -408,7 +396,28 @@
     "        \n",
     "        # Remove the 'pass' statement below \n",
     "        # and write your prediction conditions here\n",
-    "        pass\n",
+    "        sex = passenger['Sex'] == 'female'\n",
+    "        age = passenger['Age'] < 10.\n",
+    "        pclass = passenger['Pclass'] == 1\n",
+    "        pclass2 = passenger['Pclass'] == 2\n",
+    "        sibsp = passenger['SibSp'] == 3\n",
+    "\n",
+    "        \n",
+    "        survived = False\n",
+    "        if sex and age:\n",
+    "            if pclass or sibsp:\n",
+    "                survived = False\n",
+    "            else:\n",
+    "                survived = True\n",
+    "        elif sex and (pclass or pclass2):\n",
+    "            survived = True\n",
+    "        elif pclass2 and age:\n",
+    "            survived = True\n",
+    "        else:\n",
+    "            survived = False\n",
+    "\n",
+    "        \n",
+    "        predictions.append(1 if survived == True else 0)\n",
     "    \n",
     "    # Return our predictions\n",
     "    return pd.Series(predictions)\n",
@@ -431,9 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(accuracy_score(outcomes, predictions))"
@@ -443,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: *Replace this text with your answer to the question above.*"
+    "**Answer**: 80.36%"
    ]
   },
   {
@@ -464,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: *Replace this text with your answer to the question above.*"
+    "**Answer**: Finacial Trading, Robotics (e.g. Self Driving car)"
    ]
   },
   {
@@ -478,30 +485,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
